--- a/services.html
+++ b/services.html
@@ -33,6 +33,7 @@
 <body>
 
     <div class="main-container">
+        <div class="loader" id="loader"></div>  
 
         <div class="site-wrapper">
 
@@ -132,7 +133,7 @@
             </div> 
             
             <div class="container">
-                <div class="content-wrapper">
+                <div class="services-wrapper">
                     <section class="services-main">
                         <div class="services">
                             <h2 class="services-heading">Services</h2>
