--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <!-- <link rel="shortcut icon" href="assets/logo" />     -->
+        <link rel="shortcut icon" href="assets/9oceaniadds-05.svg" />    
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
         <link rel="stylesheet" type="text/css"  href='style.css' />
         
@@ -215,11 +215,7 @@
                                     <div class="contact-copyright">
                                         <div class="logo-contact">
                                             <div class="logo">
-                                                <img src="assets/9oceaniadds-04.svg" alt="">
-                                            </div>
-                                            <div class="contact-title">
-                                                <h2>Get in touch</h2>
-                                                <hr>
+                                                <img src="assets/9oceanialandslapelogojpeg.jpg" alt="">
                                             </div>
                                             <div class="contact-container">
                                                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
