--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                             <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
                                         </div>
                                         <div class="copyright">
-                                            <p>Copyright © 2024 9Oceania. All rights reserved.</p>
+                                            <p>All rights reserved, all wrong reversed.</p>
                                         </div>
                                     </div>
                                     <div class="work">
