--- a/index.html
+++ b/index.html
@@ -210,6 +210,20 @@
                                 </section>  
                             </div>
 
+                            <div class="mobile work">
+                                <div class="flag-container">
+                                    <div class="flag1">
+                                        <img src="assets/australian-aboriginal-flag.gif" alt="">
+                                    </div>
+                                    <div class="flag2">
+                                        <img src="assets/australian-aboriginal-flag2.gif" alt="">
+                                    </div>
+                                </div>
+                                <div class="content">
+                                    <p>We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
+                                </div>
+                            </div>
+
                             <div class="swiper-slide">
                                 <section class="contact-work">
                                     <div class="contact-copyright">
