--- a/seo.html
+++ b/seo.html
@@ -133,7 +133,7 @@
             
             <div class="container">
                 <div class="content-wrapper">
-                    <section class="services-main seo">
+                    <section class="services-part seo">
                         <div class="service seo">
                             <div class="service-heading">Services</div>
                             <div class="service-name">SEO</div>
@@ -163,11 +163,42 @@
                             </ul>
                         </div>
                     </section>
+                    <div class="contact-copyright copyright-section">
+                        <div class="logo-contact">
+                            <div class="logo">
+                                <img src="assets/9oceanialandslapelogojpeg.jpg" alt="">
+                            </div>
+                            <div class="contact-container">
+                                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                                    <input type="hidden" name="access_key" value="36d3e489-94df-4c5a-b981-9d2c7f9351ad">
+                                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                                    <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+                                    <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
+                                    <textarea name="message" placeholder="Your Message" class="contact-inputs textarea" required></textarea>
+                                    <button type="submit">Contact Us</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="contact-details">
+                            <div class="contact-num">
+                                <a href="tel:+61 451645561" class="contact-phone"><i class="fa-solid fa-phone"></i>+61 451645561</a>
+                                <a href="tel:+61 433863895" class="contact-phone">+61 433863895</a>
+                            </div>
+                            <div class="contact-mails">
+                                <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                <a href="mailto: admin@9oceania.com" class="contact-mail">admin@9oceania.com</a>
+                            </div>
+                            <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
+                        </div>
+                        <div class="copyright">
+                            <p>All rights reserved, all wrong reversed.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
         </div>
-
+        
     </div>
 
         <!--Load JavaScript-->
