--- a/seo.html
+++ b/seo.html
@@ -140,26 +140,23 @@
                         </div>
                         <div class="service-description seo">
                             <div class="description-title">Why SEO?</div>
-                            <p class="description-content">SEO stands as the cornerstone of digital visibility. Unlike pay-per-click (PPC)
-                                advertising, SEO focuses on enhancing your website's organic ranking on search
-                                engines like Google. It's about building a strong foundation that attracts and retains
-                                tra>ic naturally, without the constant expenditure associated with PPC.</p>
+                            <p class="description-content">SEO stands as the cornerstone of digital visibility. Unlike pay-per-click (PPC) advertising, SEO focuses on enhancing your website's organic ranking on search engines like Google. It's about building a strong foundation that attracts and retains traffic naturally, without the constant expenditure associated with PPC.</p>
                         </div>
-                        <div class="seo-expertise">
+                        <div class="service-expertise seo">
                             <div class="expertise-title">Our Expertise</div>
                             <ul>
-                                <li><a href="#">On-page SEO: <span>We fine-tune the elements on your website — from keywordoptimized content to meta tags and URLs — ensuring every page speaks the language of both your audience and search engines.</span></a></li>
-                                <li><a href="#">OW-page SEO: <span>Our strategies extend beyond your site, building your domain's authority through quality backlinks, social media presence, and influencer collaborations.</span></a></li>
-                                <li><a href="#">Technical SEO: <span>We ensure your website is not only crawlable by search engines but o>ers an unmatched user experience, focusing on speed, mobilefriendliness, and secure navigation.</span></a></li>
+                                <li><a href="#">On-page SEO: <span>We fine-tune the elements on your website — from keyword-optimized content to meta tags and URLs — ensuring every page speaks the language of both your audience and search engines.</span></a></li>
+                                <li><a href="#">Off-page SEO: <span>Our strategies extend beyond your site, building your domain's authority through quality backlinks, social media presence, and influencer collaborations.</span></a></li>
+                                <li><a href="#">Technical SEO: <span>We ensure your website is not only crawlable by search engines but offers an unmatched user experience, focusing on speed, mobile-friendliness, and secure navigation.</span></a></li>
                                 <li><a href="#">Content Creation: <span>At the heart of SEO is compelling content. From informative blog posts to engaging videos and infographics, we craft content that captures interest, answers questions, and drives action.</span></a></li>
                             </ul>
                         </div>
-                        <div class="seo-choose">
+                        <div class="service-choose seo">
                             <div class="choose-title">Why Choose Us?</div>
                             <ul>
                                 <li><a href="#">Tailored Strategies: <span>Our SEO approach is as unique as your business. Whether you're looking to dominate local searches, make a splash on the national scene, or capture a global audience, we customize our strategies to meet your goals.</span></a></li>
-                                <li><a href="#">Comprehensive Services: <span>Beyond traditional SEO, we o>er a suite of digital marketing services, from email marketing and content creation to comprehensive PPC management and social media strategies.</span></a></li>
-                                <li><a href="#">Proven Success: <span>Our track record speaks volumes. With a strategy focused on results, we've helped businesses across Australia achieve their digital marketing objectives, boosting visibility, tra>ic, and conversions.</span></a></li>
+                                <li><a href="#">Comprehensive Services: <span>Beyond traditional SEO, we offer a suite of digital marketing services, from email marketing and content creation to comprehensive PPC management and social media strategies.</span></a></li>
+                                <li><a href="#">Proven Success: <span>Our track record speaks volumes. With a strategy focused on results, we've helped businesses across Australia achieve their digital marketing objectives, boosting visibility, traffic, and conversions.</span></a></li>
                             </ul>
                         </div>
                     </section>
