--- a/woocommerce.html
+++ b/woocommerce.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9Oceania | Shopify</title>
+    <title>9Oceania | WooCommerce</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="Template by CocoBasic" />
     <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -115,31 +115,32 @@
             
             <div class="container">
                 <div class="content-wrapper">
-                    <section class="services-part shopify">
-                        <div class="service shopify">
+                    <section class="services-part woocommerce">
+                        <div class="service woocommerce">
                             <div class="service-heading">Services</div>
-                            <div class="service-name">Shopify</div>
+                            <div class="service-name">WooCommerce</div>
                         </div>
-                        <div class="service-description shopify">
-                            <div class="description-title">Why Shopify?</div>
-                            <p class="description-content">From stylish apparel to innovative gadgets, we curate an extensive collection to meet your every need. Our user-friendly Shopify interface ensures a seamless shopping experience, while our commitment to excellence guarantees satisfaction with every purchase. Explore our diverse range today and discover why 9Oceania is the go-to choice for discerning shoppers worldwide.
-                            Contact 9 Oceania today, and let us show you how our Shopify expertise can transform your digital strategy.</p>
+                        <div class="service-description woocommerce">
+                            <div class="description-title">Why WooCommerce?</div>
+                            <p class="description-content">With our WooCommerce-powered store, we bring you a curated selection of premium products that elevate your lifestyle. From fashion-forward apparel to cutting-edge electronics, our diverse range caters to every taste and need. Our user-friendly interface ensures hassle-free browsing and secure transactions, while our commitment to quality guarantees satisfaction with every purchase. Join us today and experience the ease of online shopping at its finest.
+                            Contact 9 Oceania today, and let us show you how our WooCommerce expertise can transform your digital strategy..</p>
                         </div>
-                        <div class="service-expertise shopify">
-                            <div class="expertise-title">Shopify Solutions</div>
+                        <div class="service-expertise woocommerce">
+                            <div class="expertise-title">WooCommerce Solutions</div>
                             <ul>
-                                <li><a href="#">Custom Shopify Store Development: <span>Unlock the potential of your brand with a custom-designed Shopify store that reflects your business identity and meets the specific needs of your audience.</span></a></li>
-                                <li><a href="#">Shopify SEO Optimization: <span>Enhance your store's online visibility with our expert SEO strategies, designed to boost your rankings and attract more targeted traffic..</span></a></li>
-                                <li><a href="#">Shopify Maintenance and Support: <span>Ensure your Shopify store operates flawlessly with our comprehensive maintenance and support services, keeping your business running smoothly at all times.</span></a></li>
+                                <li><a href="#">WooCommerce Store Setup: <span>Launch your online retail presence with a powerful WooCommerce platform, tailored to support your growth and scalability needs.</span></a></li>
+                                <li><a href="#">WooCommerce Customization Services: <span>Modify and enhance your WooCommerce store with custom features that cater specifically to your business requirements and customer preferences.</span></a></li>
+                                <li><a href="#">WooCommerce SEO Services: <span>Increase your store’s search engine visibility and drive sales with our specialized WooCommerce SEO techniques.</span></a></li>
                             </ul>
                         </div>
-                        <div class="service-choose shopify">
+                        <div class="service-choose woocommerce">
                             <div class="choose-title">Why Choose Us?</div>
                             <ul>
-                                <li><a href="#">E-commerce Expertise: <span>With our Shopify-powered website, you benefit from our deep expertise in e-commerce. We understand the intricacies of online selling and leverage Shopify's robust platform to create seamless shopping experiences for your customers.</span></a></li>
-                                <li><a href="#">Professional Design: <span>Our Shopify websites feature professional designs that not only look great but also drive conversions. We specialize in crafting visually appealing storefronts that showcase your products in the best possible light, helping you attract and retain customers.</span></a></li>
-                                <li><a href="#">Easy Customization: <span>Shopify offers unparalleled customization options, allowing us to tailor your website to suit your unique brand identity and business requirements. Whether you need custom themes, apps, or integrations, we have the expertise to bring your vision to life.</span></a></li>
-                                <li><a href="#">SEO-Friendly Structure: <span>We understand the importance of search engine visibility. Our Shopify websites are built with SEO best practices in mind, including optimized metadata, clean code, and fast loading times, to help you rank higher in search engine results and attract organic traffic.</span></a></li>
+                                <li><a href="#">E-commerce Functionality: <span>With WooCommerce, you get a feature-rich e-commerce platform that seamlessly integrates with WordPress, providing powerful tools for managing products, inventory, orders, and more. Our WooCommerce websites are built to handle the demands of online selling, empowering you to grow your business with ease.</span></a></li>
+                                <li><a href="#">Customization Flexibility: <span>We understand that every business is unique. That's why our WooCommerce websites offer unparalleled customization options, allowing you to tailor your online store to match your brand identity and business goals. Whether you need custom themes, plugins, or functionalities, we have the expertise to make it happen.</span></a></li>
+                                <li><a href="#">SEO Optimization: <span> Search engine visibility is essential for driving organic traffic to your website. Our WooCommerce websites are built with SEO best practices in mind, including clean code, fast loading times, and optimized metadata, to help you rank higher in search engine results and attract more visitors to your site.</span></a></li>
+                                <li><a href="#">Mobile Responsiveness: <span>With more and more users browsing the web on smartphones and tablets, it's crucial to have a website that looks great and functions flawlessly on all devices. Our WooCommerce websites are fully responsive, ensuring a seamless browsing experience for users on any screen size.</span></a></li>
+                                <li><a href="#">Security and Reliability: <span>Security is paramount in e-commerce. With WooCommerce, you can rest easy knowing that your website is hosted on a secure and reliable platform. We implement best-in-class security measures, including SSL encryption, regular security updates, and PCI compliance, to keep your customers' data safe and secure.</span></a></li>
                             </ul>
                         </div>
                     </section>
