--- a/ecommerce.html
+++ b/ecommerce.html
@@ -64,7 +64,7 @@
                                         <li><a class="heading-list" href="webflow.html">Webflow</a></li>
                                         <li><a class="heading-list" href="ecommerce.html">eCommerce</a></li>
                                         <li><a class="heading-list" href="shopify.html">Shopify</a></li>
-                                        <li><a class="heading-list" href="webcommerce.html">WebCommerce</a></li>
+                                        <li><a class="heading-list" href="woocommerce.html">WooCommerce</a></li>
                                     </ul>
             
                                     <ul class="third">
