--- a/seo.html
+++ b/seo.html
@@ -64,7 +64,7 @@
                                         <li><a class="heading-list" href="webflow.html">Webflow</a></li>
                                         <li><a class="heading-list" href="ecommerce.html">eCommerce</a></li>
                                         <li><a class="heading-list" href="shopify.html">Shopify</a></li>
-                                        <li><a class="heading-list" href="webcommerce.html">WebCommerce</a></li>
+                                        <li><a class="heading-list" href="woocommerce.html">WooCommerce</a></li>
                                     </ul>
             
                                     <ul class="third">
@@ -72,7 +72,7 @@
                                         <li><a class="heading-list" href="googleadvertise.html">Google Advertising</a></li>
                                         <li><a class="heading-list" href="seo.html">SEO</a></li>
                                         <li><a class="heading-list" href="socialadvertise.html">Paid Social Advertising</a></li>
-                                        <li><a class="heading-list" href="organicsocial.html">Organic Social</a></li>
+                                        <li><a class="heading-list" href="">Organic Social</a></li>
                                     </ul>
                                 </div>
             
