--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="assets/logo-icon.png" />    
+        <link rel="shortcut icon" href="assets/logo png.png" />  
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
         <link rel="stylesheet" type="text/css"  href='style.css' />
         
@@ -208,6 +208,146 @@
                                             </div>
                                         </div>
                                     </div>
+                                </section>  
+                            </div>
+
+                            <div class="swiper-slide">
+                                <section class="testimonials">
+                                    <div class="testimonial-title">
+                                        <h1>Testimonials</h1>
+                                    </div>
+                                    <div class="testimonial-cards carousel-slider" id="responsive">
+                                        <div class="testimonial-row carousel-content" data-grid='{"xl":1,"lg":1,"md":1,"sm":1}' data-pagination="true">
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>I had the pleasure of working closely with the Sunny team for several years while they ran our paid media channels. I cannot fault their professionalism and enthusiasm for finding ways to successfully market our brand. The team went above and beyond at all times to help with our account. I would work with them again without hesitation. Thank you Sunny for the amaing journey over the past few years!</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Clarie M</div>
+                                                        <div class="testimonial-designation">Marketing Manager - City Venue Management</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>Sunny has been a breath of fresh air. A+ for customer service and professionalism. The team are great to work with and are passionate about delivering top quality results. Highly recommend.</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">James L</div>
+                                                        <div class="testimonial-designation">CMO - GJ Gardner Homes</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>The Sunny Advertising team have helped Spitwater with advertising over a long period of time, we have enjoyed ongoing successful advertising campaigns that have maximized our investment, we regard Sunny Advertising as an important part of our business</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Gary R</div>
+                                                        <div class="testimonial-designation">CEO - Spitwater</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>Exceptional results and a fabulous team providing great service. I've had the pleasure of working with Sunny for a number of years and would recommend them to any business looking to amplify their online presence and drive meaningful results. Thank you to Matt, Maddie and the entire Sunny team.</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Nerida P</div>
+                                                        <div class="testimonial-designation">Marketing Director - Pexa</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>The Sunny Advertising team have taken our marketing activity to the next level. Providing outstanding results across our social and search platforms, on the back of expert industry knowledge, a willingness to understand the local market in detail, and the flexibility of working in a challenging environment. The team are responsive, supportive, and go the extra mile to achieve our goals. For anyone looking to get the most our of their digital marketing capabilities, I highly recommend getting in touch with Sunny Advertising.</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Seth M</div>
+                                                        <div class="testimonial-designation">Marketing Manager - SkyCity</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>I have had the pleasure of working with the team at Sunny Advertising across the past year and I must say they exceeded all expectations. They are always quick to respond and are capable of handling queries of any nature.Kudos to the entire team, especially Paige and Liv, for their remarkable work.</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Eden M</div>
+                                                        <div class="testimonial-designation">Marketing Manager - Jetts Fitness</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>Sunny Advertising looks after our advertising and the team have shown that they are passionate about our charity, going above and beyond to help with not just our advertising but offering support and advice on various aspects of communications. I value the relationship we have formed and look forward to working with Sunny Advertising for many years to come.</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Alan B</div>
+                                                        <div class="testimonial-designation">Director - Mercy Ships</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>The team at Sunny Advertising are a delight to work with. Always reachable, super knowledgable with quick response times. They go above and beyond to deliver results for our accounts with so much enthusiasm. Definitely recommend!</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Jes M</div>
+                                                        <div class="testimonial-designation">Marketing Manager - Gold's Gym</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                            <aside class="testimonial-card slide-item">
+                                                <div class="page">
+                                                    <div class="testimonial-logo">
+                                                        <h3>Logo</h3>
+                                                    </div>
+                                                    <div class="testimonial-content">
+                                                        <p>Yamaha Motors Australia has been working with Roger and the team at Sunny Media for around seven years now on all of our national retail campaigns, as well as launches and branding. Over this time, they have used their extensive media knowledge and purchasing abilities to reach the maximum possible audience across a range of mediums for the best results. Sunny Media's strategy and research into media, consumers and habits continue to be of the highest order and more importantly help us achieve industry leading outcomes.</p>
+                                                    </div>
+                                                    <div class="testimonial-details">
+                                                        <div class="testimonial-name">Sean G</div>
+                                                        <div class="testimonial-designation">Marketing Manager - Yamaha Motors Australia</div>
+                                                    </div>
+                                                </div>
+                                            </aside>
+                                        </div>
+                                        <div class="carousel-pagination"></div>
+                                    </div>
+
                                 </section>  
                             </div>
 
