--- a/index.html
+++ b/index.html
@@ -220,61 +220,61 @@
                                         <div class="testimonial-row carousel-content" data-grid='{"xl":1,"lg":1,"md":1,"sm":1}' data-pagination="true">
                                             <aside class="testimonial-card slide-item">
                                                 <div class="page">
-                                                    <div class="testimonial-logo">
-                                                        <h3>Logo</h3>
+                                                    <div class="testimonial-logo logo1">
+                                                        <img src="assets/testimonial-logo1.png" alt="">
                                                     </div>
                                                     <div class="testimonial-content">
-                                                        <p>I had the pleasure of working closely with the Sunny team for several years while they ran our paid media channels. I cannot fault their professionalism and enthusiasm for finding ways to successfully market our brand. The team went above and beyond at all times to help with our account. I would work with them again without hesitation. Thank you Sunny for the amaing journey over the past few years!</p>
+                                                        <p>I had the pleasure of working closely with the Sunny team for several years while they ran our paid media channels. I cannot fault their professionalism and enthusiasm for finding ways to successfully market our brand. The team went above and beyond at all times to help with our account. I would work with them again without hesitation. Thank you Sunny for the amazing journey over the past few years!</p>
                                                     </div>
                                                     <div class="testimonial-details">
-                                                        <div class="testimonial-name">Clarie M</div>
-                                                        <div class="testimonial-designation">Marketing Manager - City Venue Management</div>
+                                                        <div class="testimonial-name">Rajinder Satija</div>
+                                                        <div class="testimonial-designation">Director - Vimco Rolls</div>
                                                     </div>
                                                 </div>
                                             </aside>
                                             <aside class="testimonial-card slide-item">
                                                 <div class="page">
-                                                    <div class="testimonial-logo">
-                                                        <h3>Logo</h3>
+                                                    <div class="testimonial-logo logo2">
+                                                        <img src="assets/testimonial-logo2.png" alt="">
                                                     </div>
                                                     <div class="testimonial-content">
                                                         <p>Sunny has been a breath of fresh air. A+ for customer service and professionalism. The team are great to work with and are passionate about delivering top quality results. Highly recommend.</p>
                                                     </div>
                                                     <div class="testimonial-details">
-                                                        <div class="testimonial-name">James L</div>
-                                                        <div class="testimonial-designation">CMO - GJ Gardner Homes</div>
+                                                        <div class="testimonial-name">Neha</div>
+                                                        <div class="testimonial-designation">Owner - Mawa Sweets</div>
                                                     </div>
                                                 </div>
                                             </aside>
                                             <aside class="testimonial-card slide-item">
                                                 <div class="page">
-                                                    <div class="testimonial-logo">
-                                                        <h3>Logo</h3>
+                                                    <div class="testimonial-logo logo3">
+                                                        <img src="assets/testimonial-logo3.svg" alt="">
                                                     </div>
                                                     <div class="testimonial-content">
                                                         <p>The Sunny Advertising team have helped Spitwater with advertising over a long period of time, we have enjoyed ongoing successful advertising campaigns that have maximized our investment, we regard Sunny Advertising as an important part of our business</p>
                                                     </div>
                                                     <div class="testimonial-details">
-                                                        <div class="testimonial-name">Gary R</div>
-                                                        <div class="testimonial-designation">CEO - Spitwater</div>
+                                                        <div class="testimonial-name">Adam Good</div>
+                                                        <div class="testimonial-designation">MD/ Founder - Auric Essentials</div>
                                                     </div>
                                                 </div>
                                             </aside>
                                             <aside class="testimonial-card slide-item">
                                                 <div class="page">
-                                                    <div class="testimonial-logo">
-                                                        <h3>Logo</h3>
+                                                    <div class="testimonial-logo logo4">
+                                                        <img src="assets/testimonial-logo4.png" alt="">
                                                     </div>
                                                     <div class="testimonial-content">
                                                         <p>Exceptional results and a fabulous team providing great service. I've had the pleasure of working with Sunny for a number of years and would recommend them to any business looking to amplify their online presence and drive meaningful results. Thank you to Matt, Maddie and the entire Sunny team.</p>
                                                     </div>
                                                     <div class="testimonial-details">
-                                                        <div class="testimonial-name">Nerida P</div>
-                                                        <div class="testimonial-designation">Marketing Director - Pexa</div>
+                                                        <div class="testimonial-name">Daisy Bell</div>
+                                                        <div class="testimonial-designation">Director - Ulu Lounge</div>
                                                     </div>
                                                 </div>
                                             </aside>
-                                            <aside class="testimonial-card slide-item">
+                                            <!-- <aside class="testimonial-card slide-item">
                                                 <div class="page">
                                                     <div class="testimonial-logo">
                                                         <h3>Logo</h3>
@@ -343,7 +343,7 @@
                                                         <div class="testimonial-designation">Marketing Manager - Yamaha Motors Australia</div>
                                                     </div>
                                                 </div>
-                                            </aside>
+                                            </aside> -->
                                         </div>
                                         <div class="carousel-pagination"></div>
                                     </div>
@@ -370,11 +370,14 @@
                                     <div class="contact-copyright">
                                         <div class="logo-contact">
                                             <div class="logo">
-                                                <img src="assets/9oceanialandslapelogojpeg.jpg" alt="">
+                                                <img src="assets//lands logo.png" alt="">
+                                            </div>
+                                            <div class="motto">
+                                                <h3>Beyond Boundaries Above Trends</h3>
                                             </div>
                                             <div class="contact-container">
                                                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                                                    <input type="hidden" name="access_key" value="36d3e489-94df-4c5a-b981-9d2c7f9351ad">
+                                                    <input type="hidden" name="access_key" value="917e678c-2463-4b38-86da-490454b5a5af">
                                                     <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
                                                     <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
                                                     <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
@@ -395,7 +398,7 @@
                                             <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
                                         </div>
                                         <div class="copyright">
-                                            <p>All rights reserved, all wrong reversed.</p>
+                                            <p>All rights reserved, All wrongs reversed.</p>
                                         </div>
                                     </div>
                                     <div class="work">
@@ -408,7 +411,7 @@
                                             </div>
                                         </div>
                                         <div class="content">
-                                            <p>We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
+                                            <p>We acknowledge and respect the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
                                         </div>
                                     </div>
                                 </section>
