--- a/seo.html
+++ b/seo.html
@@ -163,11 +163,14 @@
                     <div class="contact-copyright copyright-section">
                         <div class="logo-contact">
                             <div class="logo">
-                                <img src="assets/9oceanialandslapelogojpeg.jpg" alt="">
+                                <img src="assets//lands logo.png" alt="">
+                            </div>
+                            <div class="motto">
+                                <h3>Beyond Boundaries Above Trends</h3>
                             </div>
                             <div class="contact-container">
                                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                                    <input type="hidden" name="access_key" value="36d3e489-94df-4c5a-b981-9d2c7f9351ad">
+                                    <input type="hidden" name="access_key" value="917e678c-2463-4b38-86da-490454b5a5af">
                                     <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
                                     <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
                                     <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
@@ -188,7 +191,7 @@
                             <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
                         </div>
                         <div class="copyright">
-                            <p>All rights reserved, all wrong reversed.</p>
+                            <p>All rights reserved, All wrongs reversed.</p>
                         </div>
                     </div>
                 </div>
