--- a/services.html
+++ b/services.html
@@ -86,25 +86,7 @@
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
-                    <!-- <form role="search" method="get" class="search-form" action="#">
-                        <label>		
-                            <input autocomplete="off" type="search" class="search-field" placeholder="Search" value="" name="s" title="Search for:"> 
-                        </label>    
-                    </form> -->
                 </nav>       
-
-                <!-- <div class="menu-right-text">
-                    <p class="menu-text-title">HELLO</p>
-                    <div class="menu-text">
-                        Welcome to our online art journey. You can read our <a href="blog.html">thoughts</a> or you can simply <a href="contact.html">write to us</a>
-                    </div>
-                    <br>
-                    <br>
-                    <a class="socail-text" href="#">TW.</a>
-                    <a class="socail-text" href="#">FB.</a>
-                    <a class="socail-text" href="#">IN.</a>
-                    <a class="socail-text" href="#">BE.</a>
-                </div> -->
             </div>
         
             <!-- Right Part Sidebar -->
@@ -137,6 +119,9 @@
                     <section class="services-main">
                         <div class="services">
                             <h2 class="services-heading">Services</h2>
+                            <div class="service-motto">
+                                <h4>Choose growth. <br> Choose impact. <br> Choose us.</h4>
+                            </div>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
                                 <li><a href="#dev-services">Web <br> Development</a></li>
