--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                 </div>
                 <ul class="socials">
                     <li><a href="https://www.instagram.com/9oceania?igsh=MTE0MHB3NmhkOGpldQ==" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
         
                 <a href="https://www.instagram.com/9oceania?igsh=MTE0MHB3NmhkOGpldQ==" target="_blank" class="pride">
@@ -229,6 +228,13 @@
                                                     <div class="testimonial-details">
                                                         <div class="testimonial-name">Rajinder Satija</div>
                                                         <div class="testimonial-designation">Director - Vimco Rolls</div>
+                                                        <div class="testimonial-ratings">
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star-half"></i>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </aside>
@@ -243,6 +249,13 @@
                                                     <div class="testimonial-details">
                                                         <div class="testimonial-name">Neha</div>
                                                         <div class="testimonial-designation">Owner - Mawa Sweets</div>
+                                                        <div class="testimonial-ratings">
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </aside>
@@ -257,6 +270,13 @@
                                                     <div class="testimonial-details">
                                                         <div class="testimonial-name">Adam Good</div>
                                                         <div class="testimonial-designation">MD/ Founder - Auric Essentials</div>
+                                                        <div class="testimonial-ratings">
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </aside>
@@ -271,6 +291,13 @@
                                                     <div class="testimonial-details">
                                                         <div class="testimonial-name">Daisy Bell</div>
                                                         <div class="testimonial-designation">Director - Ulu Lounge</div>
+                                                        <div class="testimonial-ratings">
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                            <i class="fa-solid fa-star"></i>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </aside>
@@ -373,7 +400,7 @@
                                                 <img src="assets//lands logo.png" alt="">
                                             </div>
                                             <div class="motto">
-                                                <h3>Beyond Boundaries Above Trends</h3>
+                                                <h3>Beyond Boundaries. Above Trends</h3>
                                             </div>
                                             <div class="contact-container">
                                                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
