--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <meta name="author" content="CocoBasic" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- <link rel="shortcut icon" href="images/favicon.ico" />     -->
+    <link rel="shortcut icon" href="assets/logo-icon.png" />  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
     <link rel="stylesheet" type="text/css"  href='style.css' />
@@ -104,7 +104,6 @@
                 </div>
                 <ul class="socials">
                     <li><a href="https://www.instagram.com/9oceania?igsh=MTE0MHB3NmhkOGpldQ==" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
         
                 <a href="https://www.instagram.com/9oceania?igsh=MTE0MHB3NmhkOGpldQ==" target="_blank" class="pride">
@@ -119,9 +118,6 @@
                     <section class="services-main">
                         <div class="services">
                             <h2 class="services-heading">Services</h2>
-                            <div class="service-motto">
-                                <h4>Choose growth. <br> Choose impact. <br> Choose us.</h4>
-                            </div>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
                                 <li><a href="#dev-services">Web <br> Development</a></li>
@@ -130,9 +126,8 @@
                         </div>
                     </section>
 
-                    <div class="service-content">
-                        <div class="service-subheading">Why You Should Choose Us?</div>
-                        <p class="subservice-content">Our dedication to excellence and innovation has made us a trusted partner for over 438 brands and businesses, from start-ups to Fortune 500 companies. We're committed to fuelling e-commerce growth and are ready to take your online store to new heights. Ready to revolutionize your e-commerce strategy? Contact us today to discuss how we can elevate your digital presence and drive meaningful growth for your business.</p>
+                    <div class="service-motto">
+                        <h1>Choose growth. Choose impact. Choose us.</h1>
                     </div>
         
                     <section class="creative-services" id="creative-services">
@@ -457,7 +452,7 @@
                                 <img src="assets//lands logo.png" alt="">
                             </div>
                             <div class="motto">
-                                <h3>Beyond Boundaries Above Trends</h3>
+                                <h3>Beyond Boundaries. Above Trends</h3>
                             </div>
                             <div class="contact-container">
                                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
