--- a/shopify.html
+++ b/shopify.html
@@ -10,7 +10,7 @@
     <meta name="author" content="CocoBasic" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- <link rel="shortcut icon" href="images/favicon.ico" />     -->
+    <link rel="shortcut icon" href="assets/logo-icon.png" />  
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800%7CPlayfair%20Display:700%7CPT%20Serif:400i' rel='stylesheet' type='text/css'>	
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
     <link rel="stylesheet" type="text/css"  href='style.css' />
@@ -103,7 +103,6 @@
                 </div>
                 <ul class="socials">
                     <li><a href="https://www.instagram.com/9oceania?igsh=MTE0MHB3NmhkOGpldQ==" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
         
                 <a href="https://www.instagram.com/9oceania?igsh=MTE0MHB3NmhkOGpldQ==" target="_blank" class="pride">
@@ -149,7 +148,7 @@
                                 <img src="assets//lands logo.png" alt="">
                             </div>
                             <div class="motto">
-                                <h3>Beyond Boundaries Above Trends</h3>
+                                <h3>Beyond Boundaries. Above Trends</h3>
                             </div>
                             <div class="contact-container">
                                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
