--- a/contact.html
+++ b/contact.html
@@ -81,28 +81,13 @@
                             <a href="work.html">Our Work</a>
                         </li>
                         <li>
+                            <a href="insights.html">Insights</a>
+                        </li>
+                        <li>
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
-                    <!-- <form role="search" method="get" class="search-form" action="#">
-                        <label>		
-                            <input autocomplete="off" type="search" class="search-field" placeholder="Search" value="" name="s" title="Search for:"> 
-                        </label>    
-                    </form> -->
                 </nav>       
-
-                <!-- <div class="menu-right-text">
-                    <p class="menu-text-title">HELLO</p>
-                    <div class="menu-text">
-                        Welcome to our online art journey. You can read our <a href="blog.html">thoughts</a> or you can simply <a href="contact.html">write to us</a>
-                    </div>
-                    <br>
-                    <br>
-                    <a class="socail-text" href="#">TW.</a>
-                    <a class="socail-text" href="#">FB.</a>
-                    <a class="socail-text" href="#">IN.</a>
-                    <a class="socail-text" href="#">BE.</a>
-                </div> -->
             </div>
         
             <!-- Right Part Sidebar -->
