--- a/ecommerce.html
+++ b/ecommerce.html
@@ -71,7 +71,7 @@
                                         <li><a class="heading-list" href="googleadvertise.html">Google Advertising</a></li>
                                         <li><a class="heading-list" href="seo.html">SEO</a></li>
                                         <li><a class="heading-list" href="socialadvertise.html">Paid Social Advertising</a></li>
-                                        <li><a class="heading-list" href="organicsocial.html">Organic Social</a></li>
+                                        <li><a class="heading-list" href="">Organic Social</a></li>
                                     </ul>
                                 </div>
             
@@ -81,11 +81,13 @@
                             <a href="work.html">Our Work</a>
                         </li>
                         <li>
+                            <a href="insights.html">Insights</a>
+                        </li>
+                        <li>
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
                 </nav>       
-
             </div>
         
             <!-- Right Part Sidebar -->
