--- a/index.html
+++ b/index.html
@@ -80,28 +80,13 @@
                             <a href="work.html">Our Work</a>
                         </li>
                         <li>
+                            <a href="insights.html">Insights</a>
+                        </li>
+                        <li>
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
-                    <!-- <form role="search" method="get" class="search-form" action="#">
-                        <label>		
-                            <input autocomplete="off" type="search" class="search-field" placeholder="Search" value="" name="s" title="Search for:"> 
-                        </label>    
-                    </form> -->
                 </nav>       
-
-                <!-- <div class="menu-right-text">
-                    <p class="menu-text-title">HELLO</p>
-                    <div class="menu-text">
-                        Welcome to our online art journey. You can read our <a href="blog.html">thoughts</a> or you can simply <a href="contact.html">write to us</a>
-                    </div>
-                    <br>
-                    <br>
-                    <a class="socail-text" href="#">TW.</a>
-                    <a class="socail-text" href="#">FB.</a>
-                    <a class="socail-text" href="#">IN.</a>
-                    <a class="socail-text" href="#">BE.</a>
-                </div> -->
             </div>
 
             <!-- Right Part Sidebar -->
@@ -155,9 +140,6 @@
                                             </div>
                                             <div class="left-title">
                                                 <h1>your own <br> growth <br> story</h1>
-                                            </div>
-                                            <div class="left-para">
-                                                <p>We tell your stories for you.</p>
                                             </div>
                                         </div>
                                         <div class="approach-right">
@@ -233,7 +215,7 @@
                                                             <i class="fa-solid fa-star"></i>
                                                             <i class="fa-solid fa-star"></i>
                                                             <i class="fa-solid fa-star"></i>
-                                                            <i class="fa-solid fa-star-half"></i>
+                                                            <i class="fa-solid fa-star"></i>
                                                         </div>
                                                     </div>
                                                 </div>
