--- a/services.html
+++ b/services.html
@@ -83,6 +83,9 @@
                             <a href="work.html">Our Work</a>
                         </li>
                         <li>
+                            <a href="insights.html">Insights</a>
+                        </li>
+                        <li>
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
