--- a/shopify.html
+++ b/shopify.html
@@ -82,6 +82,9 @@
                             <a href="work.html">Our Work</a>
                         </li>
                         <li>
+                            <a href="insights.html">Insights</a>
+                        </li>
+                        <li>
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
