--- a/ux.html
+++ b/ux.html
@@ -81,6 +81,9 @@
                             <a href="work.html">Our Work</a>
                         </li>
                         <li>
+                            <a href="insights.html">Insights</a>
+                        </li>
+                        <li>
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
