--- a/services.html
+++ b/services.html
@@ -121,6 +121,9 @@
                     <section class="services-main">
                         <div class="services">
                             <h2 class="services-heading">Services</h2>
+                            <div class="service-motto">
+                                <p>Choose growth. Choose impact. Choose us.</p>
+                            </div>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
                                 <li><a href="#dev-services">Web <br> Development</a></li>
@@ -128,10 +131,6 @@
                             </ul>
                         </div>
                     </section>
-
-                    <div class="service-motto">
-                        <h1>Choose growth. Choose impact. Choose us.</h1>
-                    </div>
         
                     <section class="creative-services" id="creative-services">
                         <div class="service-top">
