--- a/services.html
+++ b/services.html
@@ -120,13 +120,13 @@
                 <div class="services-wrapper">
                     <section class="services-main">
                         <div class="services">
-                            <h2 class="services-heading">Services</h2>
+                            <!-- <h2 class="services-heading">Services</h2>
                             <div class="service-motto">
                                 <p>Choose growth. Choose impact. Choose us.</p>
-                            </div>
-                            <!-- <div class="service-img">
-                                <img src="assets/Servcie font.svg" alt="">
                             </div> -->
+                            <div class="service-img">
+                                <img src="assets/Servcie font.svg" alt="">
+                            </div>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
                                 <li><a href="#dev-services">Web <br> Development</a></li>
